# ginza_http_api

./: .env  .gitignore  README.md  Taskfile.yaml  compose.yaml  gunicorn.conf.py  main.py  package.json  pyproject.toml  requirements.txt
test/: test_main.py
