[tool.poetry]
name = "ginza-http-api"
version = "0.1.0"
description = ""
authors = ["kaiiy <81578246+kaiiy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.taskipy.tasks]
# launch a develop server
run_dev = "./.venv/bin/uvicorn main:app --reload --port 8080"
# launch a product server
run_prod = "./.venv/bin/gunicorn -c gunicorn.conf.py main:app"
# kill a product server
kill_prod = "kill `cat prod.pid`"
# test 
test = "pytest"

[tool.poetry.dependencies]
python = "^3.10"
ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
