[tool.poetry]
name = "ginza-http-api"
version = "0.1.0"
description = ""
authors = ["kaiiy <81578246+kaiiy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
gunicorn = "^20.1.0"
pymagnitude = "^0.1.143"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
